infra/k8s/00-1-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: cloud-cost-compass
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0
        args:
        - start-dev
        - --import-realm
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: cloud-cost-compass
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
