infra/k8s/03-streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
  namespace: cloud-cost-compass
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      serviceAccountName: streamlit-sa
      containers:
      - name: streamlit
        image: cloud-cost-compass/app:latest
        ports:
        - containerPort: 8501
        volumeMounts:
        - name: rendered-secrets
          mountPath: /etc/secrets
          readOnly: true
      - name: vault-agent
        image: hashicorp/vault:1.16
        args:
        - agent
        - -dev-only-append-root-token
        - -template-dir=/vault/secrets
        volumeMounts:
        - name: rendered-secrets
          mountPath: /vault/secrets
        securityContext:
          runAsNonRoot: false
          runAsUser: 0
      volumes:
      - name: rendered-secrets
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  namespace: cloud-cost-compass
spec:
  selector:
    app: streamlit-app
  ports:
  - port: 8501
    targetPort: 8501
